added index.js and a readme for npm

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@noahdumba/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "my clone of lodash for learning purposes",
   "main": "assertArraysEqual.js",
   "directories": {
     "test": "test"
